# flask-webpack-turbolinks

./: .env.example  Procfile  README.md  pyproject.toml
flask_webpack_turbolinks/: __init__.py  package.json  webpack.config.js
flask_webpack_turbolinks/static/js/: app.js  index.js
flask_webpack_turbolinks/static/js/components/: Home.vue
flask_webpack_turbolinks/templates/: base.html  index.html
tests/: test_flask_webpack_turbolinks.py
